[tool.poetry]
name = "servicestatusfastapi-"
version = "0.1.0"
description = ""
authors = ["Artem Sitd  <tym3@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
